assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Oswald:100,200,300,400,500,600,700|Roboto:100,200,300,400,500,600,700');
 

html,body
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

 /*----------------------------Navbar----------------- */

.navbar {
    background-color: black;
    margin-top: 0;
    padding-top: 0;
    border-top: 5px solid #fa931c;
    border-left: 5px solid #fa931c;
}

.navbar-brand {
    color:#fa931c;
    font-family: "Oswald", sans-serif;
    font-size: 60px;
    font-weight: 400;
    margin-bottom: 0px;
    padding-top: 0px;
    padding-right: 0px;
    padding-bottom: 0px;
    padding-left: 0px;
}

.navbar .nav-item {
    color: #b5b3c2; 
    float: right;
    font-size: 18px;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    margin-left: 15px;
    margin-right: 15px;
    padding-top:5px;
    padding-bottom:1px;
}

.nav-item:hover {
    color: #f8a13d;
    border-bottom: 2px solid #b5b3c2;

}

.navbar-toggler {
    border-color: #fa931c;
    color:#fa931c
}

.burgers {
    color:#b5b3c2;
}

.navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(250,147,28, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

 /*----------------------------background-image----------------- */


#background-image {
    background: url('../images/burger-menu.jpg') no-repeat bottom right fixed;
    width: 100%;
    height: 750px; 
    background-size: cover;
    position: absolute;
    overflow: hidden;
    border-left: 5px solid #fa931c;
    text-align: center;

}
    
#main-image{
    height: 750px;
    width: 100%;
    overflow: hidden;
    position: relative;
}


 /*----------------------------review-post----------------- */


.cover-text {
    font-size: 130%;
    font-family: "Roboto", sans-serif;
    letter-spacing: 4px;
    width: 410px;
    height: 100px;
    padding-top: 170px;
    padding-left: 10px;
    position: absolute;
    }

.star-rating {
    color:#fa931c;
}

.best-place {
    color: #fa931c;
    font-size: 20px;
    padding: 0;
    font-weight: 400;
    margin-bottom: 0;
}

.review-text {
    color: #b5b3c2;
    font-size: 15px;
    margin-top: 0;
    font-weight: 400;
}

.btn.btn-outline-warning {
    color:#fa931c;
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    letter-spacing: 1px;
    border-color: #fa931c;
    margin-left: 100px;
}

.btn.btn-outline-warning:hover {
    color: black;
    background-color: #fa931c;
}

.arrow-1 {
    font-size: 50px;
    padding-top: 40px;
    padding-left: 10px;
    bottom: 10px;
    text-align: center;
    position: absolute;
    color: #fa931c;
}

.arrow-1:hover {
    font-size: 50px;
    padding-top: 40px;
    padding-left: 10px;
    bottom: 10px;
    text-align: center;
    position: absolute;
    color: white;
}


/*----------------------------About----------------- */
#about-image {
    background: url('../images/about-image.jpg') no-repeat bottom right fixed;
    width: 100%;
    height: 800px; 
    background-size: cover;
    position: absolute;
    overflow: hidden;
    border-left: 5px solid #fa931c;
    text-align: center;

}

.about-container {
    padding-top: 55px;
}

.about-block {
    padding-top: 20px;
}

#about-section{
    height: 800px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

.about-header {
    color: #fa931c;
    font-size: 30px;
    padding: 0;
    font-weight: 400;
    margin-bottom: 0;
    text-align: center;
}

.about-text {
    color: white;
    font-size: 20px;
    margin-top: 0;
    font-weight: 400;
    text-align: center;
}

/*----------------------------Reservation section----------------- */
#reservation-image {
    background: url('../images/reservation-image.jpg') no-repeat bottom right fixed;
    width: 100%;
    height: 700px; 
    background-size: cover;
    position: absolute;
    overflow: hidden;
    border-left: 5px solid #fa931c;
    text-align: center;
}

.reservation-section{
    height: 700px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

 .booking {
    font-size: 100%;
    font-family: "Roboto", sans-serif;
    letter-spacing: 2px;
    color: #fa931c;
    width: 600px;
    height: 500px;
    position: absolute;
    top: 130px;
    text-align: center;
    }

form {
    background-color: rgba(70, 70, 70, 0.616);
    padding: 30px;
}

.btn.btn-outline {
    color: white;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    border-color: #fa931c;
    background-color: rgba(255, 255, 255, 0);
}

.btn.btn-outline:hover {
    color: black;
    background-color: #fa931c;
}
/*----------------------------menu Section----------------- */
#menu-image {
    background: url('../images/menu-image.jpg') no-repeat bottom right fixed;
    width: 100%;
    height: 250px; 
    background-size: 100% 100%;
    position: absolute;
    overflow: hidden;    
    text-align: center;
}

.menu-title {
    text-align: center;
    font-family: "Oswald",sans-serif;
    margin: 0 auto;
    top: 40px;
    letter-spacing: 5px;
    color: #fa931c;
    font-size: 50px;
    font-weight: 600;
    text-decoration: underline;
}
    
.menu-section{
    height: 750px;
    width: 100%;
    background-color:black;
    border-left: 5px solid #fa931c;
}

.menu-image-section{
    height: 150px;
    width: 100%;
    background-color: black;
    border-left: 5px solid #fa931c;
}

.menu-items-description {
    font-family: "Roboto", sans-serif;
    padding-top: 25px;
    text-align: left;
    padding: 30px;
}

.burger-type {
    color:#fa931c;
    margin-top: 18px;
    margin-bottom: 0px;
    font-weight: 500;
}

.menu-items-description p {
    color: #b5b3c2;
    font-size: 16px;
    font-weight: 300;
}

.menu-items-description h3 {
    color:white;
    font-weight: 300;
    font-size: 40px;
    text-align: center;
    font-family: "Oswald", sans-serif;
    padding-bottom: 40px;
    padding-top: 30px;
} 

/*----------------------------footer----------------- */

footer {
    background-color: black;
    border-left: 5px solid #fa931c;
    border-bottom: 5px solid #fa931c;
}

footer div {
    padding-top: 15px;
    padding-bottom: 30px
}

.footer-title {
    text-align: center;
    color: #fa931c;
    font-family: "Roboto", sans-serif;
    padding-top:5%;
    font-weight: 300;
    padding-bottom: 20px;
}

.footer-info {
    text-align: center;
    color: #b5b3c2;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
    font-weight: 200;
    padding-left: 10px;
    padding-right: 10px;
}

.fas {
    color:#fa931c;

}
.info-r-divider {
    border-left: 2px solid #fa931c;
}

.info-l-divider {
    border-right: 2px solid #fa931c;
}

/*----------------------------media screen----------------- */

@media screen and (max-width: 943px) {

#main-image {
    height: 650px;
}

.cover-text {
        padding-top: 150px;
        padding-left: 25px;
    }

.about-header {
    color: #fa931c;
    font-size: 25px;
    padding: 0;
    font-weight: 400;
    margin-bottom: 0;
    text-align: center;
}

.about-text {
    color: white;
    font-size: 20px;
    margin-top: 0;
    font-weight: 400;
    text-align: center;
}

.about-container {
    padding-top: 50px;
    margin: 0 auto;
}

.about-block {
    padding-top: 15px;
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 15px;
}

#about-section{
    height: 850px;
}

#about-image {
    height: 900px;
}

.booking {
    font-size: 100%;
    font-family: "Roboto", sans-serif;
    letter-spacing: 2px;
    color: #fa931c;
    width: 380px;
    height: 500px;
    position: absolute;
    text-align: center;
}

.arrow-1 {
    display: none;
}

footer div {
    padding-top: 15px;
    padding-bottom: 30px
}

.footer-title {
    text-align: center;
    color: #fa931c;
    font-family: "Roboto", sans-serif;
    padding-top:5%;
    font-weight: 300;
    padding-bottom: 20px;
}

.footer-info {
    text-align: center;
    color: #b5b3c2;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
    font-weight: 200;
    padding-left: 3px;
    padding-right: 3px;
    margin: 0 auto;
}

.menu-section{ 
    height: 1600px;
}
}

@media screen and (max-width: 768px) {

.info-l-divider {
    display: none;
}
.info-r-divider {
    display: none;
}

}

